--- a/PodioMobile/Base.lproj/Main.storyboard
+++ b/PodioMobile/Base.lproj/Main.storyboard
@@ -80,9 +80,9 @@
                                 </connections>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rsc-7l-aPR">
-                                <rect key="frame" x="250" y="405.5" width="100" height="30"/>
+                                <rect key="frame" x="200" y="405.5" width="200" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="100" id="wxp-hL-uHl"/>
+                                    <constraint firstAttribute="width" constant="200" id="wxp-hL-uHl"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Login">
@@ -92,10 +92,15 @@
                                     <action selector="didTapLoginButton:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="qw5-j4-wyT"/>
                                 </connections>
                             </button>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="Uvk-f4-vuw">
+                                <rect key="frame" x="430" y="411" width="20" height="20"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" red="0.31764705882352939" green="0.56862745098039214" blue="0.74117647058823533" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="tintColor" red="0.96862745098039216" green="0.96862745098039216" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="Uvk-f4-vuw" firstAttribute="top" secondItem="cbU-Mh-Vvd" secondAttribute="bottom" constant="33" id="15I-XF-OxF"/>
+                            <constraint firstItem="cbU-Mh-Vvd" firstAttribute="trailing" secondItem="Uvk-f4-vuw" secondAttribute="trailing" id="2aO-Tg-XjA"/>
                             <constraint firstItem="Hzc-zk-exg" firstAttribute="top" secondItem="TBt-CF-tIm" secondAttribute="bottom" constant="30" id="3Kf-Ue-ahP">
                                 <variation key="heightClass=compact" constant="10"/>
                             </constraint>
@@ -153,6 +158,8 @@
                         </variation>
                     </view>
                     <connections>
+                        <outlet property="activityIndicator" destination="Uvk-f4-vuw" id="8Pb-jD-FH9"/>
+                        <outlet property="button_login" destination="rsc-7l-aPR" id="aIe-5K-67u"/>
                         <outlet property="constraint_topSpace" destination="ZHr-dA-vgx" id="pKx-f0-eL2"/>
                         <outlet property="constraint_trailingSpace" destination="Siw-aP-wmL" id="byB-kF-OSR"/>
                         <outlet property="imageView_logo" destination="J3a-u3-RgV" id="jQN-e3-cPD"/>
@@ -178,12 +185,12 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell_workspace" textLabel="WB6-i4-4ey" style="IBUITableViewCellStyleDefault" id="UdK-KI-pAg">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell_workspace_plain" textLabel="KzB-tP-oGH" style="IBUITableViewCellStyleDefault" id="H40-kB-Ugw">
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="UdK-KI-pAg" id="wq4-fF-iym">
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="H40-kB-Ugw" id="A7y-47-OA7">
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="WB6-i4-4ey">
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="KzB-tP-oGH">
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
