--- a/PodioMobile/Base.lproj/Main.storyboard
+++ b/PodioMobile/Base.lproj/Main.storyboard
@@ -184,8 +184,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <inset key="separatorInset" minX="15" minY="0.0" maxX="0.0" maxY="0.0"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell_workspace_plain" textLabel="KzB-tP-oGH" style="IBUITableViewCellStyleDefault" id="H40-kB-Ugw">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationLevel="1" indentationWidth="10" reuseIdentifier="cell_workspace_plain" textLabel="KzB-tP-oGH" style="IBUITableViewCellStyleDefault" id="H40-kB-Ugw">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="H40-kB-Ugw" id="A7y-47-OA7">
                                     <autoresizingMask key="autoresizingMask"/>
