--- a/PodioMobile/Base.lproj/Main.storyboard
+++ b/PodioMobile/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PodioMobile" translatesAutoresizingMaskIntoConstraints="NO" id="J3a-u3-RgV">
-                                <rect key="frame" x="150" y="40" width="301" height="129"/>
+                                <rect key="frame" x="150" y="60" width="301" height="129"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="180" id="c0T-Fr-ZS0"/>
                                     <constraint firstAttribute="width" secondItem="J3a-u3-RgV" secondAttribute="height" multiplier="7:3" id="dfs-L4-gSW"/>
@@ -40,19 +40,19 @@
                                 </variation>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PodioMobile" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P5b-Cm-hwo">
-                                <rect key="frame" x="224.5" y="189" width="152.5" height="34.5"/>
+                                <rect key="frame" x="224" y="209" width="152.5" height="34.5"/>
                                 <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="30"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login with your Podio account:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TBt-CF-tIm">
-                                <rect key="frame" x="200" y="263.5" width="201" height="17"/>
+                                <rect key="frame" x="200" y="280" width="201" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="sebrehtest+puzzle@gmail.com" borderStyle="roundedRect" placeholder="Email Address" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Hzc-zk-exg">
-                                <rect key="frame" x="150" y="310.5" width="300" height="30"/>
+                                <rect key="frame" x="150" y="327" width="300" height="30"/>
                                 <color key="tintColor" red="0.31764705879999999" green="0.56862745100000001" blue="0.74117647060000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="300" id="cVB-yc-e8I">
@@ -66,7 +66,7 @@
                                 </connections>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="password1234" borderStyle="roundedRect" placeholder="Password" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="cbU-Mh-Vvd">
-                                <rect key="frame" x="150" y="348.5" width="300" height="30"/>
+                                <rect key="frame" x="150" y="365" width="300" height="30"/>
                                 <color key="tintColor" red="0.31764705879999999" green="0.56862745100000001" blue="0.74117647060000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="300" id="JZJ-MJ-K7i">
@@ -80,7 +80,7 @@
                                 </connections>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rsc-7l-aPR">
-                                <rect key="frame" x="200" y="405.5" width="200" height="30"/>
+                                <rect key="frame" x="200" y="422" width="200" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="200" id="wxp-hL-uHl"/>
                                 </constraints>
@@ -93,7 +93,7 @@
                                 </connections>
                             </button>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="Uvk-f4-vuw">
-                                <rect key="frame" x="430" y="411" width="20" height="20"/>
+                                <rect key="frame" x="430" y="428" width="20" height="20"/>
                             </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" red="0.31764705882352939" green="0.56862745098039214" blue="0.74117647058823533" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -117,8 +117,9 @@
                             <constraint firstAttribute="trailing" secondItem="Hzc-zk-exg" secondAttribute="trailing" constant="30" id="Siw-aP-wmL"/>
                             <constraint firstItem="TBt-CF-tIm" firstAttribute="centerX" secondItem="cbU-Mh-Vvd" secondAttribute="centerX" id="TlR-8q-Pk6"/>
                             <constraint firstAttribute="centerX" secondItem="TBt-CF-tIm" secondAttribute="centerX" id="Tqq-3c-yg7"/>
-                            <constraint firstItem="TBt-CF-tIm" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="243.5" id="ZHr-dA-vgx">
+                            <constraint firstItem="TBt-CF-tIm" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="260" id="ZHr-dA-vgx">
                                 <variation key="heightClass=compact" constant="80"/>
+                                <variation key="widthClass=compact" constant="240"/>
                             </constraint>
                             <constraint firstItem="J3a-u3-RgV" firstAttribute="centerX" secondItem="P5b-Cm-hwo" secondAttribute="centerX" id="fIr-oG-Eh7"/>
                             <constraint firstAttribute="centerX" secondItem="rsc-7l-aPR" secondAttribute="centerX" id="fov-JL-vtu"/>
@@ -126,7 +127,7 @@
                             <constraint firstItem="rsc-7l-aPR" firstAttribute="top" secondItem="cbU-Mh-Vvd" secondAttribute="bottom" constant="27" id="tHq-ui-tVR">
                                 <variation key="heightClass=compact" constant="8"/>
                             </constraint>
-                            <constraint firstItem="J3a-u3-RgV" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="20" id="z1S-85-glR">
+                            <constraint firstItem="J3a-u3-RgV" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="40" id="z1S-85-glR">
                                 <variation key="heightClass=compact" constant="100"/>
                             </constraint>
                         </constraints>
@@ -157,6 +158,8 @@
                             </mask>
                         </variation>
                     </view>
+                    <navigationItem key="navigationItem" id="pqc-pe-hxP"/>
+                    <nil key="simulatedTopBarMetrics"/>
                     <connections>
                         <outlet property="activityIndicator" destination="Uvk-f4-vuw" id="8Pb-jD-FH9"/>
                         <outlet property="button_login" destination="rsc-7l-aPR" id="aIe-5K-67u"/>
@@ -170,11 +173,12 @@
                         <outletCollection property="animatableViews" destination="cbU-Mh-Vvd" collectionClass="NSMutableArray" id="2rr-Jy-wAY"/>
                         <outletCollection property="animatableViews" destination="Hzc-zk-exg" collectionClass="NSMutableArray" id="U8f-uH-fQN"/>
                         <outletCollection property="animatableViews" destination="TBt-CF-tIm" collectionClass="NSMutableArray" id="VL6-gj-ir1"/>
+                        <segue destination="w4N-fu-30c" kind="show" identifier="proceed" id="19K-C1-pMe"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1127" y="334"/>
+            <point key="canvasLocation" x="609" y="1079"/>
         </scene>
         <!--Workspaces-->
         <scene sceneID="Dep-2G-U0H">
@@ -241,13 +245,10 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
-                    <connections>
-                        <segue destination="vXZ-lx-hvc" kind="presentation" identifier="login" id="nFe-2E-A3z"/>
-                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="19s-ex-RQ1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1127" y="1079"/>
+            <point key="canvasLocation" x="1353" y="1079"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="cl6-tN-JFr">
@@ -260,12 +261,12 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="w4N-fu-30c" kind="relationship" relationship="rootViewController" id="s76-Sh-sp8"/>
+                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="xtT-4d-g3R"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rjK-Jg-Jvt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="315" y="1079"/>
+            <point key="canvasLocation" x="-129" y="1079"/>
         </scene>
     </scenes>
     <resources>
